# Basta

./: .gitignore  README.md  pyproject.toml
analysis/data/processed/: age_combined.csv  genre_combined.csv
analysis/data/raw/: age_1.csv  age_10.csv  age_11.csv  age_12.csv  age_13.csv  age_14.csv  age_15.csv  age_16.csv  age_2.csv  age_3.csv  age_4.csv  age_5.csv  age_6.csv  age_7.csv  age_8.csv  age_9.csv  genre_1.csv  genre_10.csv  genre_11.csv  genre_12.csv  genre_13.csv  genre_14.csv  genre_15.csv  genre_16.csv  genre_2.csv  genre_3.csv  genre_4.csv  genre_5.csv  genre_6.csv  genre_7.csv  genre_8.csv  genre_9.csv  pop_age.csv  pop_arr1.csv  pop_arr2.csv  pop_arr3.csv  pop_arr4.csv
analysis/notebooks/: clean.ipynb
carto/: main.py
carto/data/analyse/: densite_pav_pop_nice.csv  dist_moy_Nice.csv  dist_moy_par_arrondissement.csv  dist_moy_par_quartier.csv
carto/data/cache/: distances_adresses_pav.shp  distances_adresses_pav.shx  distances_moyenne_adresses_pav.dbf
carto/data/cache/distances_Nice/: distances_Nice.shp  distances_Nice.shx
carto/data/raw/: pav_marseille_fixed.geojson  pop_marseille_2022.csv  population_france.parquet
carto/docs/: index.html
carto/scripts/: carte_volume_pop_arr.ipynb  carto_bacs_quartiers.ipynb  densite_pav_pop_Nice.ipynb  densite_pav_pop_quartiers.ipynb  distance_moyenne_habitation_pav.ipynb  distance_moyenne_nice.ipynb  explore_pav.ipynb  surface_couverte.ipynb
docs/: index.html
scripts_carto/: carte_volume_pop_arr.ipynb  carto_bacs_quartiers.ipynb  distance_moyenne_habitation_pav.ipynb  surface_couverte.ipynb
