[project]
name = "basta"
version = "0.1.0"
description = "Cartographie interactive et analyse de représentativité du Baromètre Basta à Marseille"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "contextily>=1.7.0",
    "folium>=0.20.0",
    "geopandas>=1.1.2",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "requests>=2.32.5",
]
